--- a/css/main.css
+++ b/css/main.css
@@ -18,9 +18,6 @@
     position: fixed !important;
   }
 
-  
-
-
 .o3{
   width: 415px;
   display: inline-block;
@@ -30,4 +27,31 @@
 
 .btn{
   display: block;
+  height: 80px;
 }
+
+.btn:hover{
+  cursor: inherit;
+}
+
+.head-description{
+  font-family: 'Quicksand', sans-serif;
+  line-height: 110%;
+  width: 1200px;
+  float: left;
+  padding-left: 625px;
+  padding-top: 18px;
+  text-align: left;
+}
+
+.head-contact{
+  font-family: 'Quicksand', sans-serif;
+  line-height: 110%;
+  width: 400px;
+  float: right;
+  padding-right: 30px;
+  padding-top: 18px;
+  text-align: right;
+  margin-right: 613px;
+}
+
