--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-// Only necessary for window height sized blocks.
+/ Only necessary for window height sized blocks.
   html, body, .block {
     height: 100%;
   }
@@ -17,6 +17,9 @@
   .pinned {
     position: fixed !important;
   }
+
+  
+
 
 .o3{
   width: 415px;
