--- a/works/catalog/css/main.css
+++ b/works/catalog/css/main.css
@@ -1,7 +1,7 @@
-
 body{
     background-color: aliceblue;
     background-image: url(../images/1.jpg);
+    background-size: cover;
 }
 li{
     font-family: helvetica;
@@ -9,16 +9,17 @@ li{
     list-style: none;
     padding: 10px;
     margin: 5px;
-    border-bottom: black solid 2px;
+    border-bottom: black solid 1px;
 }
 input{
-    font-size: 18px;
+    font-size: 24px;
     margin: 45px;
-    padding: 5px;
+    padding: 15px;
     border-radius: 8px;
 }
 #container{
     width: 550px;
-    background-color: cyan;
+    color: white;
     opacity: 0.7;
+    margin: auto;
 }
